src/objects/CFM_Integration_Log__c.object
<CustomObject>
    <description>CFM - This object is used to record data transfers and other communication with external systems.</description>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_Called__c</fullName>
        <label>Method Called</label>
        <picklist>
            <picklistValues>
                <fullName>importPanel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sendSurveyToPanel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connection Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Batch</label>
        <referenceTo>CFM_Survey_Batch__c</referenceTo>
        <relationshipLabel>CFM Integration Logs</relationshipLabel>
        <relationshipName>CFM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CFM Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Result__c</columns>
        <columns>Status__c</columns>
        <columns>Method_Called__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CFMLOG-{000000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>